<resources>
    <string name="app_name">MyBalanceDiary</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="goal">Goal:</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="my_balance_diary">My Balance Diary</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="lifestyle">Lifestyle:</string>
    <string name="weight">Weight</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="height">Height</string>
    <string name="register">Register</string>
    <string name="age">Age</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="weight_kg">Weight,kg</string>
    <string name="height_cm_">Height,cm</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="search">Search</string>
    <string name="voice">Voice</string>
    <string name="card_view">Card View</string>
    <string name="add">ADD</string>
    <string name="calories">Calories</string>
    <string name="fdxf">fdxf</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="password_login">Password</string>
    <string name="email_login">Email</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="login">Login</string>
    <string name="water_tracker">Water Tracker</string>
    <string name="weight_track">Weight Track</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="submit_here">Submit Here</string>
    <string name="hide_confirm">hide_confirm</string>
    <string name="show_pass">show_pass</string>
    <string name="birth_date">Birth Date</string>
    <string name="submit_here_delete">Submit here</string>
    <string name="settings_">Settings</string>
    <string name="logout_">LogOut</string>
    <string name="Add">Add</string>
    <string name="next">Next</string>
    <string name="username">Username</string>


</resources>