<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar"
            android:title="@string/calendar" />

        <item
            android:id="@+id/weight_track"
            android:title="Weight Control"
            android:icon="@drawable/w_track"/>

        <item
            android:id="@+id/water_tracker"
            android:title="@string/water_tracker"
            android:icon="@drawable/water"/>
        <item
            android:id="@+id/stepsMain2"
            android:title="Steps"
            android:icon="@drawable/steps_24"/>

    </group>
</menu>