<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="348dp"
        android:layout_height="33dp"
        android:layout_marginBottom="648dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="592dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="536dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/Goals"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/goal"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_weight" />

    <Spinner
        android:id="@+id/spinnerNewGoals"
        android:layout_width="270dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Goals"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/WorkoutFreqText"
        android:layout_width="111dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/lifestyle"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNewGoals" />

    <Spinner
        android:id="@+id/NewWorkoutFreq"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/spinnerNewGoals"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/WorkoutFreqText"
        app:layout_constraintTop_toBottomOf="@+id/WorkoutFreqText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewWorkoutFreq"
        app:layout_constraintVertical_bias="0.055" />


</androidx.constraintlayout.widget.ConstraintLayout>